--- a/vra8-u-ctrl.html
+++ b/vra8-u-ctrl.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-<title>VRA8-U CTRL</title>
+<title>PRA32-U CTRL</title>
 <style>
 * {
   font-size: 12px;
@@ -41,7 +41,7 @@ td.keyh {
 }
 </style>
 <script>
-const APP_NAME_VERSION = "VRA8-U CTRL v2.2.1";
+const APP_NAME_VERSION = "PRA32-U CTRL v2.2.1";
 
 const MIDI_CH        = 0;       // Basic Channel 1
 const NOTE_OFF       = 0x80;
@@ -109,10 +109,10 @@ const ALL_SOUND_OFF   = 120;
 const RESET_ALL_CTRLS = 121;
 const ALL_NOTES_OFF   = 123;
 
-// Special Random Control (for VRA8-U CTRL)
+// Special Random Control (for PRA32-U CTRL)
 const SP_RAND_CTRL    = 90;
 
-// Special Program Change (for VRA8-U CTRL)
+// Special Program Change (for PRA32-U CTRL)
 const SP_PROG_CHG_0   = 112;
 const SP_PROG_CHG_1   = 113;
 const SP_PROG_CHG_2   = 114;
@@ -441,7 +441,7 @@ function onMIDIMessage(event) {
         document.getElementById("spanPB").innerHTML = pb;
       }
     } else if (number >= SP_PROG_CHG_0 && number <= SP_PROG_CHG_7) {
-      // Special Program Change (only for VRA8-U CTRL)
+      // Special Program Change (only for PRA32-U CTRL)
       var programIndex = number - SP_PROG_CHG_0;
       var oldValue = specialProgramChangeCCValues[programIndex];
       specialProgramChangeCCValues[programIndex] = value;
@@ -450,7 +450,7 @@ function onMIDIMessage(event) {
         return;
       }
     } else if (number == SP_RAND_CTRL   ) {
-      // Special Random Control (only for VRA8-U CTRL)
+      // Special Random Control (only for PRA32-U CTRL)
       var oldValue = specialRandomControlCCValue;
       specialRandomControlCCValue = value;
       if (oldValue <= 63 && value >= 64) {
@@ -868,7 +868,7 @@ function fileExport() {
 
   var blob = new Blob([str]);
   const a = document.createElement('a');
-  a.download = 'vra8-u-prog.json';
+  a.download = 'pra32-u-prog.json';
   document.body.appendChild(a);
   a.href = URL.createObjectURL(blob);
   a.click();
@@ -907,7 +907,7 @@ function getStoredCCValueString(index, number) {
 <body>
 
 <table>
-<tr><td><span id="spanAppNameVersion"></span></td><td>&nbsp;&nbsp;Digital Synth VRA8-U Controller Application (<a href="https://github.com/risgk/digital-synth-vra8-u">View on GitHub</a>)</td></tr>
+<tr><td><span id="spanAppNameVersion"></span></td><td>&nbsp;&nbsp;Digital Synth PRA32-U Controller Application (<a href="https://github.com/risgk/digital-synth-pra32-u">View on GitHub</a>)</td></tr>
 <tr><td>&nbsp;</td></tr>
 </table>
 
