--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -43,7 +43,8 @@ td.keyh {
 <script>
 const APP_NAME_VERSION = "PRA32-U CTRL v0.0.0";
 
-const MIDI_CH        = 0;       // Basic Channel 1
+const MIDI_CH        = 0;       // 0-based
+
 const NOTE_OFF       = 0x80;
 const NOTE_ON        = 0x90;
 const CONTROL_CHANGE = 0xB0;
