--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -234,7 +234,7 @@ var presetControllers = {};
 presetControllers[OSC_1_WAVE     ] = [0  , 0  , 0  , 0  , 0  , 96 , 0  , 0  ];
 presetControllers[OSC_1_SHAPE    ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
 presetControllers[OSC_1_MORPH    ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
-presetControllers[MIXER_SUB_OSC  ] = [127, 127, 127, 127, 127, 0  , 0  , 0  ];
+presetControllers[MIXER_SUB_OSC  ] = [127, 127, 127, 127, 127, 127, 0  , 0  ];
 
 presetControllers[OSC_2_WAVE     ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
 presetControllers[OSC_2_COARSE   ] = [71 , 71 , 64 , 76 , 64 , 64 , 64 , 64 ];
@@ -1054,9 +1054,9 @@ function getStoredCCValueString(index, number) {
 </tr>
 <tr>
 <td colspan="2"><b>Osc 1</b> Wave [Saw|-|Tri|Pls|Sqr]  </td>
-<td colspan="2"><b>Osc 1</b> Shape <i>$$</i>                  </td>
-<td colspan="2"><b>Osc 1</b> Morph <i>$$</i>                  </td>
-<td colspan="2"><b>Mixer</b> Sub Osc <i>$$$</i>               </td>
+<td colspan="2"><b>Osc 1</b> Shape <i>$</i>                   </td>
+<td colspan="2"><b>Osc 1</b> Morph <i>$</i>                   </td>
+<td colspan="2"><b>Mixer</b> Sub Osc <i>$</i>                 </td>
 </tr>
 <tr>
 <td><input  id="inputCC24"  type="range" min="0" max="127" step="1" oninput="onChangeControlChange(OSC_1_WAVE     , value)"></td>
