Enable Osc 2 in Paraphonic Mode (1)

--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -387,7 +387,7 @@ var specialProgramChangeCCValues = [0, 0, 0, 0, 0, 0, 0, 0];
 var specialRandomControlCCValue = 0;
 
 function afterChangeOsc1WaveOrVoiceMode() {
-  var targetCCNumbers = [55, 20, 21, 25, 86];
+  var targetCCNumbers = [86];
 
   var valueVoiceMode = localStorage.getItem("keyCC87");
   if (valueVoiceMode < 32) {
