--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -1055,8 +1055,8 @@ function getStoredCCValueString(index, number) {
 </tr>
 <tr>
 <td colspan="2"><b>Osc 1</b> Wave [Saw|-|Tri|Pls|Sqr]  </td>
-<td colspan="2"><b>Osc 1</b> Shape                     </td>
-<td colspan="2"><b>Osc 1</b> Morph                     </td>
+<td colspan="2"><b>Osc 1</b> Shape <i>$$</i>                  </td>
+<td colspan="2"><b>Osc 1</b> Morph <i>$$</i>                  </td>
 <td colspan="2"><b>Mixer</b> Sub Osc                   </td>
 </tr>
 <tr>
