--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -983,9 +983,9 @@ function getStoredCCValueString(index, number) {
     <td></td>
     <td><input type="button" value="#0 Fifth [Legato] "   onclick="preset(0)"></td>
     <td></td>
-    <td><input type="button" value="#1 Quad PWM [Para]"   onclick="preset(1)"></td>
+    <td><input type="button" value="#1 Quad [Para]"       onclick="preset(1)"></td>
     <td></td>
-    <td><input type="button" value="#2 Plus [Para]"       onclick="preset(2)"></td>
+    <td><input type="button" value="#2 Plus PWM [Para]"   onclick="preset(2)"></td>
     <td></td>
     <td><input type="button" value="#3 Minus [Para]"      onclick="preset(3)"></td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
