--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -232,8 +232,8 @@ var presetControllers = {};
 
 // PRESET                             #0   #1   #2   #3   #4   #5   #6   #7   
 presetControllers[OSC_1_WAVE     ] = [0  , 0  , 96 , 0  , 0  , 96 , 0  , 0  ];
-presetControllers[OSC_1_SHAPE    ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
-presetControllers[OSC_1_MORPH    ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
+presetControllers[OSC_1_SHAPE    ] = [0  , 0  , 127, 0  , 0  , 0  , 0  , 0  ];
+presetControllers[OSC_1_MORPH    ] = [0  , 0  , 127, 0  , 0  , 0  , 0  , 0  ];
 presetControllers[MIXER_SUB_OSC  ] = [127, 0  , 0  , 0  , 127, 0  , 0  , 0  ];
 
 presetControllers[OSC_2_WAVE     ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
@@ -985,7 +985,7 @@ function getStoredCCValueString(index, number) {
     <td></td>
     <td><input type="button" value="#1 Quad [Para]"       onclick="preset(1)"></td>
     <td></td>
-    <td><input type="button" value="#2 Plus PWM [Para]"   onclick="preset(2)"></td>
+    <td><input type="button" value="#2 Plus 32 [Para]"    onclick="preset(2)"></td>
     <td></td>
     <td><input type="button" value="#3 Minus [Para]"      onclick="preset(3)"></td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
