--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -234,7 +234,7 @@ var presetControllers = {};
 presetControllers[OSC_1_WAVE     ] = [0  , 0  , 96 , 0  , 0  , 96 , 0  , 0  ];
 presetControllers[OSC_1_SHAPE    ] = [0  , 0  , 127, 0  , 0  , 0  , 0  , 0  ];
 presetControllers[OSC_1_MORPH    ] = [0  , 0  , 127, 0  , 0  , 0  , 0  , 0  ];
-presetControllers[MIXER_SUB_OSC  ] = [127, 0  , 0  , 0  , 127, 0  , 0  , 0  ];
+presetControllers[MIXER_SUB_OSC  ] = [127, 64 , 64 , 64 , 127, 64 , 64 , 64 ];
 
 presetControllers[OSC_2_WAVE     ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
 presetControllers[OSC_2_COARSE   ] = [71 , 76 , 64 , 64 , 64 , 64 , 64 , 64 ];
@@ -623,6 +623,7 @@ function updateDisplayOfControl(number, value) {
   document.getElementById("inputCC" + String(number)).value = parseInt(value);
 
   switch (number) {
+  case MIXER_SUB_OSC   :
   case OSC_2_COARSE    :
   case OSC_2_FINE      :
   case FILTER_EG_AMT   :
@@ -1057,7 +1058,7 @@ function getStoredCCValueString(index, number) {
 <td colspan="2"><b>Osc 1</b> Wave [Saw|-|Tri|Pls|Sqr]  </td>
 <td colspan="2"><b>Osc 1</b> Shape <i>$$</i>                  </td>
 <td colspan="2"><b>Osc 1</b> Morph <i>$$</i>                  </td>
-<td colspan="2"><b>Mixer</b> Sub Osc                   </td>
+<td colspan="2"><b>Mixer</b> Noise/Sub Osc [N|S]       </td>
 </tr>
 <tr>
 <td><input  id="inputCC24"  type="range" min="0" max="127" step="1" oninput="onChangeControlChange(OSC_1_WAVE     , value)"></td>
