Change  Mixer Sub Osc to Mixer Noise/Sub Osc [N|S] (2)

--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -1058,7 +1058,7 @@ function getStoredCCValueString(index, number) {
 <td colspan="2"><b>Osc 1</b> Wave [Saw|-|Tri|Pls|Sqr]  </td>
 <td colspan="2"><b>Osc 1</b> Shape <i>$$</i>                  </td>
 <td colspan="2"><b>Osc 1</b> Morph <i>$$</i>                  </td>
-<td colspan="2"><b>Mixer</b> Noise/Sub Osc [N|S]       </td>
+<td colspan="2"><b>Mixer</b> Noise/Sub Osc <i>$$$</i> [N|S]   </td>
 </tr>
 <tr>
 <td><input  id="inputCC24"  type="range" min="0" max="127" step="1" oninput="onChangeControlChange(OSC_1_WAVE     , value)"></td>
