Change Preset Programs (7)

--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -994,7 +994,7 @@ function getStoredCCValueString(index, number) {
     <td></td>
     <td><input type="button" value="#1 Quad [Para]"       onclick="preset(1)"></td>
     <td></td>
-    <td><input type="button" value="#2 Plus 32 [Para]"    onclick="preset(2)"></td>
+    <td><input type="button" value="#2 Plus PWM [Para]"   onclick="preset(2)"></td>
     <td></td>
     <td><input type="button" value="#3 Minus [Para]"      onclick="preset(3)"></td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
