--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -234,7 +234,7 @@ var presetControllers = {};
 presetControllers[OSC_1_WAVE     ] = [0  , 0  , 96 , 0  , 0  , 96 , 0  , 0  ];
 presetControllers[OSC_1_SHAPE    ] = [0  , 0  , 127, 0  , 0  , 0  , 0  , 0  ];
 presetControllers[OSC_1_MORPH    ] = [0  , 0  , 127, 0  , 0  , 0  , 0  , 0  ];
-presetControllers[MIXER_SUB_OSC  ] = [127, 64 , 64 , 64 , 127, 64 , 64 , 64 ];
+presetControllers[MIXER_SUB_OSC  ] = [127, 60 , 60 , 60 , 127, 60 , 64 , 64 ];
 
 presetControllers[OSC_2_WAVE     ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
 presetControllers[OSC_2_COARSE   ] = [71 , 76 , 64 , 64 , 64 , 64 , 64 , 64 ];
@@ -977,7 +977,7 @@ function getStoredCCValueString(index, number) {
     <td></td>
     <td><input type="button" value="#4 Decay [Mono]"      onclick="preset(4)"></td>
     <td></td>
-    <td><input type="button" value="#5 PWM Lead [Legato]" onclick="preset(5)"></td>
+    <td><input type="button" value="#5 PWM [Legato]"      onclick="preset(5)"></td>
     <td></td>
     <td><input type="button" value="#6 Saw [Para]"        onclick="preset(6)"></td>
     <td></td>
@@ -994,7 +994,7 @@ function getStoredCCValueString(index, number) {
     <td></td>
     <td><input type="button" value="#1 Quad [Para]"       onclick="preset(1)"></td>
     <td></td>
-    <td><input type="button" value="#2 Plus PWM [Para]"   onclick="preset(2)"></td>
+    <td><input type="button" value="#2 Plus [Para]"       onclick="preset(2)"></td>
     <td></td>
     <td><input type="button" value="#3 Minus [Para]"      onclick="preset(3)"></td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
