Fix EG Sustain and Amp Sustain

--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -1223,7 +1223,7 @@ function getStoredCCValueString(index, number) {
 <tr>
 <td colspan="2">Pitch Bend Range                </td>
 <td colspan="2"><b>Chorus</b> Bypass [Off|On]          </td>
-<td colspan="2">EG Amp Mod [Off|On]             </td>
+<td colspan="2"><b>EG</b> Amp Mod [Off|On]             </td>
 <td colspan="2">Release = Decay [Off|On]        </td>
 </tr>
 <tr>
