--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -105,6 +105,11 @@ const CHORUS_BYPASS   = 111;
 const EG_AMP_MOD      = 31;
 const REL_EQ_DECAY    = 89;
 
+const FILTER_MODE     = 109;
+
+
+
+
 const PC_BY_CC_8      = 112;
 const PC_BY_CC_9      = 113;
 const PC_BY_CC_10     = 114;
@@ -176,6 +181,11 @@ var controlNumberToStringMap = new Map([
   [ CHORUS_BYPASS  , "CHORUS_BYPASS  " ],
   [ EG_AMP_MOD     , "EG_AMP_MOD     " ],
   [ REL_EQ_DECAY   , "REL_EQ_DECAY   " ],
+
+  [ FILTER_MODE    , "FILTER_MODE    " ],
+
+
+
 ]);
 
 var controllersInLocalStorage = [
@@ -228,6 +238,11 @@ var controllersInLocalStorage = [
   CHORUS_BYPASS  ,
   EG_AMP_MOD     ,
   REL_EQ_DECAY   ,
+
+  FILTER_MODE    ,
+
+
+
 ];
 
 var presetControllers = {};
@@ -282,6 +297,11 @@ presetControllers[P_BEND_RANGE   ] = [2  , 2  , 2  , 2  , 2  , 2  , 2  , 2  ];
 presetControllers[CHORUS_BYPASS  ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
 presetControllers[EG_AMP_MOD     ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
 presetControllers[REL_EQ_DECAY   ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
+
+presetControllers[FILTER_MODE    ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
+
+
+
 
 const PRESET_NUMBER_INITIAL = 7;
 </script>
@@ -683,7 +703,8 @@ function setRandom() {
         (i != CHORUS_DLY_TIME) &&
         (i != CHORUS_BYPASS  ) &&
         (i != EG_AMP_MOD     ) &&
-        (i != REL_EQ_DECAY   )) {
+        (i != REL_EQ_DECAY   ) &&
+        (i != FILTER_MODE    )) {
       onChangeControlChange(i, rand(128));
     }
   });
@@ -880,6 +901,11 @@ function fileExport() {
   str += fileExportOneLine(CHORUS_BYPASS  );
   str += fileExportOneLine(EG_AMP_MOD     );
   str += fileExportOneLine(REL_EQ_DECAY   );
+  str += "\n";
+  str += fileExportOneLine(FILTER_MODE    );
+  str += "\n";
+  str += "\n";
+  str += "\n";
   str += "  \"_end         \" : \"\"\n";
   str += "}\n";
 
@@ -1235,6 +1261,22 @@ function getStoredCCValueString(index, number) {
 <td><span    id="spanCC31" >-</span></td>
 <td><input  id="inputCC89"  type="range" min="0" max="127" step="1" oninput="onChangeControlChange(REL_EQ_DECAY   , value)"></td>
 <td><span    id="spanCC89" >-</span></td>
+</tr>
+<tr>
+<td colspan="2"><b>Filter</b> Mode [LP|LC]             </td>
+<td colspan="2">                                </td>
+<td colspan="2">                                </td>
+<td colspan="2">                                </td>
+</tr>
+<tr>
+<td><input  id="inputCC109" type="range" min="0" max="127" step="1" oninput="onChangeControlChange(FILTER_MODE    , value)"></td>
+<td><span    id="spanCC109">-</span></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
 </tr>
 <tr>
 <td colspan="8"><hr></td>
