--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -729,8 +729,7 @@ function setRandom() {
         (i != CHORUS_DLY_TIME) &&
         (i != CHORUS_BYPASS  ) &&
         (i != EG_AMP_MOD     ) &&
-        (i != REL_EQ_DECAY   ) &&
-        (i != FILTER_MODE    )) {
+        (i != REL_EQ_DECAY   )) {
       onChangeControlChange(i, rand(128));
     }
   });
