Support Polyphonic Mode (1)

--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -1191,7 +1191,7 @@ function getStoredCCValueString(index, number) {
 <tr>
 <td colspan="2"><b>EG</b> Osc Amt [-|+]                  </td>
 <td colspan="2"><b>EG</b> Osc Dst [P|2P|1S]              </td>
-<td colspan="2">Voice Mode [Par|-|Mon|Lgt|LP]     </td>
+<td colspan="2">Voice Mode [Par|Pol|Mon|Lgt|LP]   </td>
 <td colspan="2">Portamento                        </td>
 </tr>
 <tr>
