Support Polyphonic Mode (2)

--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -1039,7 +1039,7 @@ function getStoredCCValueString(index, number) {
     <td></td>
     <td><input type="button" value="#5 PWM [Legato]"      onclick="preset(5)"></td>
     <td></td>
-    <td><input type="button" value="#6 Saw [Para]"        onclick="preset(6)"></td>
+    <td><input type="button" value="#6 Saw [Poly]"        onclick="preset(6)"></td>
     <td></td>
     <td><input type="button" value="#7 Initial [Legato]"  onclick="preset(7)"></td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
@@ -1052,11 +1052,11 @@ function getStoredCCValueString(index, number) {
     <td></td>
     <td><input type="button" value="#0 Fifth [Legato] "   onclick="preset(0)"></td>
     <td></td>
-    <td><input type="button" value="#1 Quad [Para]"       onclick="preset(1)"></td>
+    <td><input type="button" value="#1 Quad [Poly]"       onclick="preset(1)"></td>
     <td></td>
-    <td><input type="button" value="#2 Plus [Para]"       onclick="preset(2)"></td>
+    <td><input type="button" value="#2 Plus [Poly]"       onclick="preset(2)"></td>
     <td></td>
-    <td><input type="button" value="#3 Minus [Para]"      onclick="preset(3)"></td>
+    <td><input type="button" value="#3 Minus [Poly]"      onclick="preset(3)"></td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
     <td></td>
     <td></td>
@@ -1191,7 +1191,7 @@ function getStoredCCValueString(index, number) {
 <tr>
 <td colspan="2"><b>EG</b> Osc Amt [-|+]                  </td>
 <td colspan="2"><b>EG</b> Osc Dst [P|2P|1S]              </td>
-<td colspan="2">Voice Mode [Par|Pol|Mon|Lgt|LP]   </td>
+<td colspan="2">Voice Mode [Pol|Par|Mon|LP|Lgt]   </td>
 <td colspan="2">Portamento                        </td>
 </tr>
 <tr>
