Support Polyphonic Mode (4)

--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -270,7 +270,7 @@ presetControllers[EG_RELEASE     ] = [0  , 64 , 0  , 0  , 0  , 0  , 0  , 0  ];
 
 presetControllers[EG_OSC_AMT     ] = [64 , 64 , 64 , 64 , 64 , 64 , 64 , 64 ];
 presetControllers[EG_OSC_DST     ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
-presetControllers[VOICE_MODE     ] = [127, 0  , 0  , 0  , 64 , 127, 0  , 127];
+presetControllers[VOICE_MODE     ] = [127, 0  , 0  , 0  , 64 , 127, 0  , 0  ];
 presetControllers[PORTAMENTO     ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
 
 presetControllers[LFO_WAVE       ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
@@ -1041,7 +1041,7 @@ function getStoredCCValueString(index, number) {
     <td></td>
     <td><input type="button" value="#6 Saw [Poly]"        onclick="preset(6)"></td>
     <td></td>
-    <td><input type="button" value="#7 Initial [Legato]"  onclick="preset(7)"></td>
+    <td><input type="button" value="#7 Initial [Poly]"    onclick="preset(7)"></td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
     <td>Misc</td>
     <td></td>
