--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -249,7 +249,7 @@ var presetControllers = {};
 
 // PRESET                             #0   #1   #2   #3   #4   #5   #6   #7   
 presetControllers[OSC_1_WAVE     ] = [96 , 96 , 96 , 96 , 96 , 96 , 96 , 0  ];
-presetControllers[OSC_1_SHAPE    ] = [0  , 0  , 0  , 0  , 0  , 0  , 0  , 0  ];
+presetControllers[OSC_1_SHAPE    ] = [0  , 0  , 0  , 0  , 0  , 0  , 127, 0  ];
 presetControllers[OSC_1_MORPH    ] = [64 , 64 , 64 , 64 , 64 , 0  , 127, 0  ];
 presetControllers[MIXER_SUB_OSC  ] = [127, 64 , 64 , 64 , 127, 64 , 64 , 64 ];
 
@@ -260,13 +260,13 @@ presetControllers[MIXER_OSC_MIX  ] = [64 , 32 , 32 , 32 , 32 , 32 , 32 , 0  ];
 
 presetControllers[FILTER_CUTOFF  ] = [115, 115, 91 , 115, 67 , 115, 67 , 127];
 presetControllers[FILTER_RESO    ] = [64 , 64 , 32 , 32 , 64 , 64 , 32 , 0  ];
-presetControllers[FILTER_EG_AMT  ] = [64 , 64 , 100, 16 , 112, 64 , 112, 64 ];
+presetControllers[FILTER_EG_AMT  ] = [64 , 64 , 100, 16 , 112, 64 , 76 , 64 ];
 presetControllers[FILTER_KEY_TRK ] = [127, 127, 127, 127, 127, 127, 127, 127];
 
 presetControllers[EG_ATTACK      ] = [0  , 32 , 16 , 96 , 0  , 0  , 0  , 0  ];
-presetControllers[EG_DECAY       ] = [0  , 0  , 48 , 96 , 96 , 0  , 96 , 0  ];
+presetControllers[EG_DECAY       ] = [0  , 0  , 64 , 96 , 96 , 0  , 112, 0  ];
 presetControllers[EG_SUSTAIN     ] = [127, 127, 0  , 0  , 0  , 127, 0  , 127];
-presetControllers[EG_RELEASE     ] = [0  , 64 , 32 , 32 , 96 , 0  , 96 , 0  ];
+presetControllers[EG_RELEASE     ] = [0  , 32 , 0  , 0  , 96 , 0  , 0  , 0  ];
 
 presetControllers[EG_OSC_AMT     ] = [64 , 64 , 70 , 64 , 64 , 64 , 96 , 64 ];
 presetControllers[EG_OSC_DST     ] = [0  , 0  , 64 , 0  , 0  , 0  , 127, 0  ];
@@ -284,9 +284,9 @@ presetControllers[LFO_FILTER_AMT ] = [64 , 64 , 64 , 64 , 64 , 64 , 64 , 64 ];
 presetControllers[AMP_LEVEL      ] = [127, 127, 127, 127, 127, 127, 127, 127];
 
 presetControllers[AMP_ATTACK     ] = [0  , 32 , 0  , 0  , 0  , 0  , 0  , 0  ];
-presetControllers[AMP_DECAY      ] = [0  , 0  , 0  , 0  , 96 , 0  , 96 , 0  ];
+presetControllers[AMP_DECAY      ] = [0  , 0  , 0  , 0  , 96 , 0  , 112, 0  ];
 presetControllers[AMP_SUSTAIN    ] = [127, 127, 127, 127, 0  , 127, 0  , 127];
-presetControllers[AMP_RELEASE    ] = [0  , 64 , 32 , 32 , 96 , 0  , 96 , 0  ];
+presetControllers[AMP_RELEASE    ] = [0  , 32 , 0  , 0  , 96 , 0  , 0  , 0  ];
 
 presetControllers[CHORUS_MODE    ] = [127, 127, 127, 127, 127, 127, 127, 0  ];
 presetControllers[CHORUS_RATE    ] = [32 , 32 , 32 , 32 , 32 , 32 , 32 , 32 ];
@@ -1035,32 +1035,32 @@ function getStoredCCValueString(index, number) {
 <table>
 <tr><td>Preset</td>
     <td></td>
-    <td><input type="button" value="#4 Synth Bass [Mono]"    onclick="preset(4)"></td>
+    <td><input type="button" value="#4 Synth Bass [Mono]"     onclick="preset(4)"></td>
     <td></td>
-    <td><input type="button" value="#5 PWM Lead [Legato]"    onclick="preset(5)"></td>
+    <td><input type="button" value="#5 PWM Lead [Legato]"     onclick="preset(5)"></td>
     <td></td>
-    <td><input type="button" value="#6 Decay Pad [Poly]"     onclick="preset(6)"></td>
+    <td><input type="button" value="#6 Electric Piano [Poly]" onclick="preset(6)"></td>
     <td></td>
-    <td><input type="button" value="#7 Initial [Poly]"       onclick="preset(7)"></td>
+    <td><input type="button" value="#7 Initial [Poly]"        onclick="preset(7)"></td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
     <td>Misc</td>
     <td></td>
-    <td><input type="button" value="Random Ctrl"             onclick="setRandom()"></td>
+    <td><input type="button" value="Random Ctrl"              onclick="setRandom()"></td>
     <td></td>
-    <td><input type="button" value="Random FX"               onclick="setRandomChorus()"></td></tr>
+    <td><input type="button" value="Random FX"                onclick="setRandomChorus()"></td></tr>
 <tr><td></td>
     <td></td>
-    <td><input type="button" value="#0 Fifth Lead [Legato] " onclick="preset(0)"></td>
+    <td><input type="button" value="#0 Fifth Lead [Legato] "  onclick="preset(0)"></td>
     <td></td>
-    <td><input type="button" value="#1 Synth Strings [Poly]" onclick="preset(1)"></td>
+    <td><input type="button" value="#1 Synth Strings [Poly]"  onclick="preset(1)"></td>
     <td></td>
-    <td><input type="button" value="#2 Synth Brass [Poly]"   onclick="preset(2)"></td>
+    <td><input type="button" value="#2 Synth Brass 1 [Poly]"  onclick="preset(2)"></td>
     <td></td>
-    <td><input type="button" value="#3 Minus Pad [Poly]"     onclick="preset(3)"></td>
+    <td><input type="button" value="#3 Synth Brass 2 [Poly]"  onclick="preset(3)"></td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
     <td></td>
     <td></td>
-    <td><input type="button" value="Reset"                   onclick="panic()"></td></tr>
+    <td><input type="button" value="Reset"                    onclick="panic()"></td></tr>
 <tr><td>&nbsp;</td></tr>
 </table>
 
