Revert "Add Filter Mode HP (High Pass) and remove LC (Low Cut) (1)"
This reverts commit 138982a8eecc811a546d780443e895b3656b737d.

--- a/pra32-u-ctrl.html
+++ b/pra32-u-ctrl.html
@@ -1288,7 +1288,7 @@ function getStoredCCValueString(index, number) {
 <td><span    id="spanREL_EQ_DECAY   " >-</span></td>
 </tr>
 <tr>
-<td colspan="2"><b>Filter</b> Mode [LP|HP]             </td>
+<td colspan="2"><b>Filter</b> Mode [LP|LC]             </td>
 <td colspan="2">                                </td>
 <td colspan="2">                                </td>
 <td colspan="2">                                </td>
